SCRUM-68 fix(temporary styles): update gap in header and adjust temporary styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,14 +50,20 @@ a {
   }
 }
 
+/*! temporary styles */
 .head {
   display: flex;
-  gap: 5px;
+  gap: 10px;
   border: 1px solid silver;
   width: 100%;
   height: 60px;
   justify-content: center;
   align-items: center;
+
+  a {
+    border: 1px solid white;
+    padding: 4px;
+  }
 }
 
 main {
@@ -66,3 +72,5 @@ main {
   justify-content: center;
   min-height: calc(100vh - 60px);
 }
+
+/*! temporary styles */
